--- a/Server/markdown/ES6笔记/代理器.md
+++ b/Server/markdown/ES6笔记/代理器.md
@@ -1,19 +1,14 @@
 # 代理器
 
-let propr = new Proxy(obj, {
-
-get(target,key,proptypeof) {
-
-console.log(arguments)
-
-console.log(target[key])
-
-},
-
-set() {
-
 ```
-        }
-    })
-    console.log(propr.name)
+let propr = new Proxy(obj, {
+  get(target, key, proptypeof) {
+    console.log(arguments);
+
+    console.log(target[key]);
+  },
+
+  set() {},
+});
+console.log(propr.name);
 ```
